[package]
name = "huaweimodbusread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modbus = "1.0.5"
web3_rust_wrapper = "0.5.0"
tokio = { version= "1.19.2", features = ["full"] }
web3 = "0.18.0"
chrono = "0.4.23"